Fix z-index and move text css to separate sheet

--- a/Website/css/styles.css
+++ b/Website/css/styles.css
@@ -1,10 +1,5 @@
 body {
-    font-family: 'Manrope', sans-serif;
-    font-weight: lighter;
-    letter-spacing: 1px;
-    text-align: center;
     align-content: center;
-    line-height: 1.1;
     background-image: url(../img/bgnew.gif);
     background-repeat: repeat;
     background-size: 20%;
@@ -35,15 +30,12 @@ header {
     margin-bottom: 8px;
 
     position: fixed;
+    z-index: 2;
 }
 
 header h1 {
     margin: auto;
     width: 35%;
-    font-family: 'Poiret One', sans-serif;
-    font-size: 38px;
-    text-align: center;
-    color: #051c05;
 }
 
 header ul {
